fixed gap form

--- a/assets/sass/layout/_lib.scss
+++ b/assets/sass/layout/_lib.scss
@@ -20,23 +20,30 @@
   }
 
   .c-lib__feed {
+    --flex-gap: 1rem;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    row-gap: 1rem;
-    column-gap: 1.5rem;
+    // row-gap: 1rem;
+    // column-gap: 1.5rem;
+    gap: var(--flex-gap);
 
     .c-lib__article {
       flex: 0 0 100%;
 
       // TO-DO: rätt break-points
       @media (min-width: 744px) {
-        flex: 0 0 calc(50% - 0.75rem);
+        --flex-items: 2;
+        // flex: 0 0 calc(50% - 0.75rem);
+        flex: 0 0
+          calc(
+            (100% / var(--flex-items)) -
+              (((var(--flex-items) - 1) / var(--flex-items)) * var(--flex-gap))
+          );
       }
 
       @media (min-width: 1280px) {
-        // TO-DO: fixa calc
-        flex: 0 0 calc(33% - 0.75rem);
+        --flex-items: 3;
       }
     }
   }
